syntax = "proto3";

package io.harness.delegate;

option java_multiple_files = true;
option go_package = "920_delegate_service_beans";

service DelegateTask {
  rpc QueueTask(DelegateClassicTaskRequest) returns (QueueTaskResponse);
  rpc ExecuteTask(DelegateClassicTaskRequest) returns (ExecuteTaskResponse);
  rpc AbortTask(AbortExpireTaskRequest) returns (AbortTaskResponse);
  rpc ExpireTask(AbortExpireTaskRequest) returns (ExpireTaskResponse);
  rpc CreatePerpetualTaskClassic(CreatePerpetualTaskRequestClassic) returns (CreatePerpetualTaskResponseClassic);
}

message DelegateClassicTaskRequest {
  bytes delegate_task_kryo = 1;
}

message AbortExpireTaskRequest {
  string account_id = 1;
  string delegate_task_id = 2;
}

message CreatePerpetualTaskRequestClassic {
   string perpetual_task_type = 1;
   string account_id = 2;
   bytes client_context_kryo = 3;
   bytes perpetual_task_schedule_kryo = 4;
   bool allowDuplicate = 5;
   string task_description = 6;
}

message QueueTaskResponse {
  string uuid = 1;
}

message ExecuteTaskResponse {
  bytes delegate_task_response_kryo = 1;
}

message AbortTaskResponse {
  bytes delegate_task_kryo = 1;
}

message ExpireTaskResponse {
  string message = 1;
}

message CreatePerpetualTaskResponseClassic {
  string message = 1;
}